--- a/AdminExample/view/adminhtml/layout/training_adminexample_admin_page.xml
+++ b/AdminExample/view/adminhtml/layout/training_adminexample_admin_page.xml
@@ -2,7 +2,11 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block name="admin-page-example" template="Training_AdminExample::example-page.phtml"/>
+            <block name="admin-page-example" template="Training_AdminExample::example-page.phtml">
+                <arguments>
+                    <argument name="config_data" xsi:type="object">Training\AdminExample\ViewModel\TrainingConfigViewModel</argument>
+                </arguments>
+            </block>
         </referenceContainer>
     </body>
 </page> 
